--- a/Book.Core.Contracts/Book.Core.Contracts.csproj
+++ b/Book.Core.Contracts/Book.Core.Contracts.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Book.Core.Domain\Book.Core.Domain.csproj" />
   </ItemGroup>
 
