--- a/WebApplication1/Properties/launchSettings.json
+++ b/WebApplication1/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "WebApplication1": {
+    "BookApp.Web": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
