--- a/Book.Core.Contracts/BookApp.Core.Contracts.csproj
+++ b/Book.Core.Contracts/BookApp.Core.Contracts.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="MediatR" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Book.Core.Domain\BookApp.Core.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Books\Commands\List\" />
   </ItemGroup>
 
 </Project>
